--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -358,9 +358,9 @@ codeblock:
   highlight_theme: normal
   # Add copy button on codeblock
   copy_button:
-    enable: false
+    enable: ture
     # Show text copy result.
-    show_result: false
+    show_result: ture
     # Available values: default | flat | mac
     style:
 
