--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -98,9 +98,9 @@ creative_commons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
+#scheme: Muse
 #scheme: Mist
-#scheme: Pisces
+scheme: Pisces
 #scheme: Gemini
 
 # Dark Mode
@@ -995,4 +995,6 @@ vendors:
 # Assets
 css: css
 js: js
-images: images
+mages: images
+
+
